[package]
name = "test-tokio-serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full", "rt-multi-thread"]}
tokio-serial = "5.4.3"
tokio-util = { version = "0.7.0", features = ["codec", "rt"]}
